--- a/calc.html
+++ b/calc.html
@@ -15,7 +15,7 @@
   <div id="calculator">
       <span class="billtippeople">Bill
         </span>
-         <input id="billamt" class="form-control" type="text" placeholder="$">
+         <input id="billamt" class="form-control" type="text" placeholder="$" value ="$">
           <span class="billtippeople">Tip %</span>
 <div class="input-group mb-3 plusMinusDivs">
   <div class="input-group-prepend">
